--- a/style/style.css
+++ b/style/style.css
@@ -1,31 +1,37 @@
 body {
-        font-family: Helvetica;
-        color: rgb(22, 22, 22);
-        background-color: rgb(41, 41, 41);
-    }
-	
-a {
-        color: black;
-    }
-    
-#banner {
-        background-image: linear-gradient( rgb(63, 63, 63), rgb(41, 41, 41));
-        height: 80px;
-    }
-    
-#navi {
-        background-color: rgb(63, 63, 63);
-        text-align: center;
-        padding: 0px 1px 0px 1px;
-    }
-    
-    #navi div {
-        text-align: center;
-        border-style: solid;
-        border-color: whitesmoke;
-    }
+    font-family: Helvetica;
+    color: rgb(22, 22, 22);
+    background-color: rgb(41, 41, 41);
+}
 
-#members{
-	display:table;
-	margin:0 auto;
+a {
+    color: black;
+}
+
+#banner {
+    background-image: linear-gradient( rgb(63, 63, 63), rgb(41, 41, 41));
+    height: 80px;
+}
+
+#navi {
+    background-color: rgb(63, 63, 63);
+    text-align: center;
+    padding: 0px 1px 0px 1px;
+}
+
+#navi div {
+    text-align: center;
+    border-style: solid;
+    border-color: whitesmoke;
+}
+
+#members {
+    display: table;
+    margin: 0 auto;
+}
+
+#kirjautuminen {
+    text-align: right;
+    display: table;
+    margin: auto;
 }
